Fix #1431 "Grid menu is cropped in scrolling dialogs"
- don't move global menus in DOM, but with CSS
- fix menu z-index
- move grid/repeater JS files to XBL

--- a/src/resources/apps/fr/style/form-runner-bootstrap-override.less
+++ b/src/resources/apps/fr/style/form-runner-bootstrap-override.less
@@ -286,6 +286,9 @@ body.orbeon {
     // ---------
 
     .dropdown-menu {
+
+        z-index: 2000; // because YUI dialogs are > 1000
+
         // <a> nested one more level
         > li > span > a {
             display: block;
